--- a/app.wxss
+++ b/app.wxss
@@ -7,8 +7,8 @@ page{
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  /* align-items: center; */
+  /* justify-content: space-between; */
   padding: 0px;
   box-sizing: border-box;
   text-align: center;
