--- a/pages/meals/index.wxml
+++ b/pages/meals/index.wxml
@@ -31,13 +31,13 @@
 </view>
 <view wx:elif="{{mealType==1 && tp==0}}">
   <view wx:if="{{mealUseNum>0}}">
-    <i-notice-bar icon="systemprompt" loop speed="3000">
-      我的套餐剩余使用次数：{{mealUseNum}}次
+    <i-notice-bar icon="systemprompt" loop speed="2000">
+      我的套餐剩余使用次数：{{mealUseNum}}次。客服热线：4000009443
     </i-notice-bar>
   </view>
   <view wx:else>
-    <i-notice-bar icon="systemprompt" loop speed="3000">
-      您没有可使用的套餐，请先购买！
+    <i-notice-bar icon="systemprompt" loop speed="2000">
+      您没有可使用的套餐，请先购买！客服热线：4000009443
     </i-notice-bar>
   </view>
   <scroll-view class='page-core' scroll-y="true">
