--- a/components/cart/index.wxss
+++ b/components/cart/index.wxss
@@ -1,5 +1,5 @@
 .cart {
-    height: 8vh;
+    height: 50px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -26,10 +26,9 @@
     justify-content: center;
 }
 .icon {
-    width: 8vh;
-    height: 8vh;
+    width: 6vh;
+    height: 6vh;
     position: relative;
-    top: -2vh;
     border-radius: 50%;
     background: rgba(0, 0, 0, .7);
     margin: 0 2vw;
