--- a/pages/goods/index.wxss
+++ b/pages/goods/index.wxss
@@ -319,3 +319,64 @@
    border:none;
    border-radius: 0;
 }
+/**购物车*/
+.drawer_screen {  
+  width: 100%;  
+  height: 80%;  
+  position: fixed;  
+  top: 0;  
+  left: 0;  
+  z-index: 1000;  
+  background: #000;  
+  opacity: 0.5;  
+  overflow: hidden;  
+}  
+
+.cartlist-float{  
+  width: 100%; 
+  overflow: hidden;  
+  position: fixed;   
+  z-index: 1001;
+  bottom: 100px;
+  max-height: 250px;  
+} 
+.label-cart-bar{
+  color:#878787;
+  font-size:14px;
+  border-left:4px solid #FF2DCD;
+  margin-left: 20px;
+  display: flex;
+  justify-content: space-between;
+  height:30px;
+
+}
+.icon-clear{
+    color:#878787;
+    float: right;
+    margin-right: 10px;
+}
+.label-clear{
+    color:#878787;
+    font-size: 12px;
+}
+.cart-scroll-list{
+  height:450rpx;
+}
+.cart-list-box{
+  background:#FFFFFF;
+  display:flex;
+  font-size:13px;
+  align-items: center;
+ 
+}
+.list-info{
+  width:50%;
+  padding:5px 15px;
+}
+.list-info-size{
+  font-size:10px;
+  color:#B1B1B1;
+}
+.activity-color{
+  color:#FF9C35;
+}
