--- a/pages/orderDetail/index.wxml
+++ b/pages/orderDetail/index.wxml
@@ -56,7 +56,7 @@
             <view>
               <radio-group bindchange="changePay" >
                  <radio value="{{0}}" checked="{{item.checked}}" checked='{{true}}'/>微信支付
-                 <radio value="{{1}}" checked="{{item.checked}}"/>余额支付
+                 <!-- <radio value="{{1}}" checked="{{item.checked}}"/>余额支付 -->
               </radio-group>
             </view>
         </view> 
