--- a/pages/balance/index.wxml
+++ b/pages/balance/index.wxml
@@ -5,14 +5,14 @@
 <view class="zhye_1">
   {{price.price(balance)}}
 </view>
-<navigator openType="redirectTo" url="../recharge/index">
-  <view class="smwz">
+
+  <view class="smwz" bindtap="recharge">
   <!-- bindtap="saoma" -->
     <view  class="smgw">
       充值
     </view>
   </view>
-</navigator>
+
 
 
 
