--- a/pages/goods/index.wxml
+++ b/pages/goods/index.wxml
@@ -39,16 +39,16 @@
                 <text >{{item.commodityName}}</text>
               </view>
               <view wx:if="{{isVip == 1 && isFirstBuy==1}}">
-                <view class="coltex vipPrice">会员价：￥{{price.price(item.costPrice)}}</view>
+                <!-- <view class="coltex vipPrice">会员价：￥{{price.price(item.costPrice)}}</view> -->
                 <view class="coltex price">
                   <text style='text-decoration:line-through;color:#000;margin-left:0px;'>原价：￥{{price.price(item.retailPrice)}}</text>
                 </view>
               </view>
               <view wx:else>
                 <view class="coltex price">购买价：￥{{price.price(item.retailPrice)}} </view>
-                <view class="coltex vipPrice">
+                <!-- <view class="coltex vipPrice">
                   <text style='text-decoration:color:#000;margin-left:0px;'>会员价：￥{{price.price(item.costPrice)}}  </text>
-                </view>
+                </view> -->
               </view>
 
               <!-- <text class="discount" wx:if='{{item.discount && item.discount>0}}'>已优惠:{{price.price(item.discount)}}</text> -->
@@ -87,9 +87,11 @@
       </view>
     </scroll-view>
   </view>
-  <view wx:else class="tssm">
-    <image src='../images/scancode.jpg' class='p' bindtap="click"></image>
-    <text class='txt'>扫码进入小程序</text>
+  <view wx:else class="scan">
+     <view class="scan-sm" bindtap="click">
+      <view style="font-size:34rpx;color:#777;font-weight:600">扫描设备的二维码</view>
+      <image src='../images/scancode.png' style="width:160rpx;height:160rpx;"></image>
+    </view>
   </view>
   <view class="mask" catchtouchmove="preventTouchMove" wx:if="{{hidden}}"></view>
   <view class="modalDlg" wx:if="{{hidden}}">
