--- a/pages/meals/index.wxss
+++ b/pages/meals/index.wxss
@@ -144,3 +144,23 @@ page {
   line-height:2;
   margin-right: 15px;
 }
+.goods-empty{
+  width: 120px;
+height: 100px;
+position: absolute;
+top: calc( 50% - 50px );
+left: calc( 50% - 60px );
+text-align: center;
+
+}
+.goods-empty-img {
+  height: 80px;
+width: 80px;
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 50%;
+background: #999;
+margin: auto;
+
+}
