--- a/components/cart/index.wxss
+++ b/components/cart/index.wxss
@@ -1,10 +1,10 @@
 .cart {
-    height: 50px;
+    height: 100rpx;
     width: 100%;
     display: flex;
     align-items: center;
     position: fixed;
-    bottom: 50px;
+    bottom: 100rpx;
     z-index: 100;
     background: rgba(0, 0, 0, .2);
     transition:  all linear 1s;
