--- a/pages/goods/index.wxss
+++ b/pages/goods/index.wxss
@@ -168,7 +168,9 @@
 }
 .sub-left{
     width: 23%;
-    height: 82%;
+    /* height: 82%; */
+    height:calc(100% - 200rpx);
+
 }
 .sub-left .ul-left view{
     height: 60px;
@@ -181,105 +183,54 @@
     color:#EF4746;
 }
 .sub-right{
-    width: 75%;
-    height: 82%;
+    width: 77%;
+    height:calc(100% - 200rpx);
     background: #fff;
     /* margin-top:5px; */
 }
-.sub-right .title{
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    text-align: left;
-    background: #fff;
-    box-sizing: border-box;
-    color: #646464;
-    padding: 0px 10px 10px 10px
-}
 
-.sub-right .lists-img image{
-    width: 60px;
-    height: 60px;
-}
-.sub-right .lists-img p{
-    text-align: center;
-    color: #c0c0c0;
-    height:35px;
-    line-height:35px;
-    overflow: hidden;
-}
-
-/* .colsview {
-    display: flex;
-    align-items: center;
-    padding: 10rpx;
-}
-.colsview > image{
-    width: 10vh;
-    height: 10vh;
-   margin-right: 20rpx;
-   border-radius: 5rpx;
-}
-.colsview > .goods {
-    flex:1;
-    height: 10vh;
-    justify-content: flex-start;
-    display: flex;
-    flex-direction: column;
-} 
-*/
 .colsview {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     padding: 10rpx;
 }
-.colsview > image{
-    width: 10vh;
-    height: 10vh;
-   margin-right: 10rpx;
-   border-radius: 5rpx;
+.good-image{
+  width: 140rpx;
+  height:140rpx;
+  margin-right: 10rpx;
+  border-radius: 5rpx;
 }
 
 .goods {
-    padding: 10rpx;
-    flex:1;
-    height: 10vh;
-    /* justify-content: flex-start;  
-    display: flex;
-    flex-direction: column; */
-    /* justify-content: space-around;*/
+    width: 400rpx;
 }
-.counter{
-    height: 10vh;
-    display: flex; 
-    justify-content: center;
-    align-items:flex-end;
-    padding-right:0px; 
-     position:absolute;
-     width: 15vh;
-     right:0px;
-     padding-bottom: 0px;
-    
-}
-.sub-lists {
-    padding-bottom:10px;
-}
+
+
 .hdsp{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  height: 80rpx;
+  font-size: 31rpx;
+  font-weight: bold;
+  text-align: left;
+  overflow:hidden;
 }
 .hdcss{
-  font-size: 16px;
-  margin-right: 10px;
+  /* margin-right: 10rpx; */
   color: #fd7601;
+}
+.good-price{
+  /* width:240rpx; */
+  font-size:31rpx;
+
+  display: flex; 
+  justify-content:space-between;
+   align-items:center; 
 }
 .coltex{
     text-align: left;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-top: 30rpx;
+   
 }
 .vipPrice {
     color: red;
