--- a/pages/mycenter/index.wxss
+++ b/pages/mycenter/index.wxss
@@ -187,7 +187,7 @@ flex-direction: column;
   background: #fff;
   box-sizing: border-box;
   padding: 0px 10px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 .order-list-all navigator {
